[gd_scene load_steps=3 format=2]

[ext_resource path="res://chalk.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer"]
margin_left = 23.3326
margin_top = 25.9932
margin_right = 151.333
margin_bottom = 169.993
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 52.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 118.0
margin_bottom = 14.0
text = "BackGround Color:"

[node name="BackGroundColor" type="ColorPickerButton" parent="Camera2D/CanvasLayer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 118.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="Camera2D/CanvasLayer/VBoxContainer"]
margin_top = 56.0
margin_right = 132.0
margin_bottom = 76.0

[node name="PanelContainer2" type="PanelContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
margin_top = 80.0
margin_right = 132.0
margin_bottom = 118.0

[node name="SpinBox" type="SpinBox" parent="Camera2D/CanvasLayer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 31.0
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/VBoxContainer"]
margin_top = 122.0
margin_right = 132.0
margin_bottom = 142.0
text = "Save"

[node name="FileDialog" type="FileDialog" parent="Camera2D/CanvasLayer"]
margin_left = 224.0
margin_top = 80.0
margin_right = 936.0
margin_bottom = 496.0
resizable = true
access = 2
current_dir = "/Users/drace/Documents/ChalkBoard"
current_path = "/Users/drace/Documents/ChalkBoard/"

[node name="Panel" type="Panel" parent="."]
margin_left = 181.0
margin_top = 114.0
margin_right = 646.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="color_changed" from="Camera2D/CanvasLayer/VBoxContainer/PanelContainer/VBoxContainer/BackGroundColor" to="Panel/Board" method="_on_BackGroundColor_color_changed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="Camera2D/CanvasLayer/FileDialog" to="." method="_on_FileDialog_file_selected"]
